# structures-generator

./: .gitignore  Cargo.toml  README.md  config.toml  urls.json
src/: macros.rs  main.rs  parse.rs  prs.rs  tok.rs  utils.rs  web.rs
src/cfg/: mod.rs  tests.rs
src/pre/: mod.rs  tests.rs
src/prs/: mod.rs  tests.rs
src/tok/: mod.rs  tests.rs
src/web/: mod.rs  tests.rs
